[tool.poetry]
name = "cluster_maintenance"
version = "0.0.0"
description = "Maintenance programs for running a beowulf cluster."
authors = [
    "TJ Liggett <trevor.liggett@gmail.com>",
    "Eugene Triguba <eugenetriguba@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tliggett/clustermaintenance"
keywords = ["cluster", "maintenance"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.scripts]
cm = 'cluster_maintenance.runner:cm'

[tool.taskipy.tasks]
test = "poetry run pytest -v --cov=cluster_maintenance/ tests/"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^1.20"
autoflake = "^1.3"
isort = "^4.3"
seed-isort-config = "^1.9"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
flake8 = "^3.7"
bump2version = "^0.5.11"
pytest = "^3.0"
pytest-cov = "^2.8"
taskipy = "^1.1.3"

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["click", "pytest"]
known_first_party = ["cluster_maintenance"]

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"